--- a/neoreach.html
+++ b/neoreach.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>NeoReach: Influencer Marketing For Global Brands</title>
+    <title>NeoReach: Influencer Marketing For Global Brands | Create By Raeed Khan</title>
 
     <link rel="stylesheet" href="./assets/css/neoreach.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
